--- a/Tracker/Base.lproj/TRMain.storyboard
+++ b/Tracker/Base.lproj/TRMain.storyboard
@@ -42,6 +42,16 @@
                                     <action selector="todaysDateButtonPressed" destination="tsR-hK-woN" eventType="touchUpInside" id="WQs-5N-Ynb"/>
                                 </connections>
                             </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Record Saved" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7W2-ec-bCQ" customClass="SpringLabel" customModule="Spring">
+                                <rect key="frame" x="19" y="74" width="337" height="53"/>
+                                <color key="backgroundColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="30"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="autohide" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Elt-Uh-2qj">
                                 <rect key="frame" x="16" y="137" width="343" height="530"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -89,12 +99,17 @@
                             <constraint firstItem="jMm-R1-hOo" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="10" id="6mt-GE-BYu"/>
                             <constraint firstItem="Elt-Uh-2qj" firstAttribute="top" secondItem="jMm-R1-hOo" secondAttribute="bottom" constant="10" id="C1u-cW-niQ"/>
                             <constraint firstItem="Elt-Uh-2qj" firstAttribute="bottom" secondItem="4ug-Mw-9AY" secondAttribute="top" id="GdR-Hd-qS3"/>
+                            <constraint firstItem="7W2-ec-bCQ" firstAttribute="centerY" secondItem="jMm-R1-hOo" secondAttribute="centerY" id="IHv-16-UQm"/>
                             <constraint firstItem="jMm-R1-hOo" firstAttribute="width" secondItem="tsR-hK-woN" secondAttribute="width" multiplier="0.9" id="Ocz-WX-XqV"/>
+                            <constraint firstItem="7W2-ec-bCQ" firstAttribute="centerX" secondItem="jMm-R1-hOo" secondAttribute="centerX" id="Vs0-kX-q9p"/>
                             <constraint firstItem="Elt-Uh-2qj" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="YAQ-ba-fbu"/>
+                            <constraint firstItem="7W2-ec-bCQ" firstAttribute="height" secondItem="jMm-R1-hOo" secondAttribute="height" id="aMQ-6n-KBo"/>
+                            <constraint firstItem="7W2-ec-bCQ" firstAttribute="width" secondItem="jMm-R1-hOo" secondAttribute="width" id="i44-8h-hgq"/>
                             <constraint firstItem="Elt-Uh-2qj" firstAttribute="trailing" secondItem="tsR-hK-woN" secondAttribute="trailingMargin" id="uX1-Fo-Ta0"/>
                             <constraint firstItem="jMm-R1-hOo" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="veZ-ZY-FWX"/>
                         </constraints>
                         <connections>
+                            <outlet property="recordSavedLabel" destination="7W2-ec-bCQ" id="tJ2-Pb-JTd"/>
                             <outlet property="todaysDateButton" destination="jMm-R1-hOo" id="fJA-hz-lmp"/>
                             <outlet property="trackerTableView" destination="Elt-Uh-2qj" id="nr4-PF-ESP"/>
                         </connections>
